# cmake-examples-enhanced

01-basic/M-multiple-libraries/: CMakeLists.txt
01-basic/M-multiple-libraries/lib/: CMakeLists.txt  Hello.cpp
01-basic/M-multiple-libraries/src/: CMakeLists.txt
